# codorum

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CodorumBackLog.md  LICENSE  PRODUCT_DOCS.md  README.md  chat.md  index.html  mockup-codorum-interactive.html  mockup-timeline-v5-claude.html  mockup-timeline-v7.html  mockup-timeline.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json  settings.json
CODORUM-MAIN-GUI/: IMPLEMENTATION.md  README.md  mockup.html  mockup_interactive.html  mockup_self.html  timeline_mockup.html
CODORUM-MAIN-GUI/src/: App.tsx  AppContext.tsx  TimelineMockupApp.tsx  index.css  mockData.ts  timeline_main.tsx  types.ts
codorum-mcp/: package-lock.json  package.json
codorum-mcp/src/: db.ts  index.ts
docs/: 01-current-state.md  02-framework-research.md  03-strategy.md  04-features-wishlist.md  lessons.md  tutorial-mcp-sketch-claude.md
docs/mockups/: mockup-timeline-gemini.html  mockup-timeline-v3.html  mockup-timeline-v4.html  mockup-timeline-v5-gemini.html
docs/model_coms/: chat.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  registry.rs  snapshot.rs  watcher.rs
src/components/: CodeEditor.tsx  CodeView.tsx  CommandPalette.tsx  ContentPane.tsx  DiffBadge.tsx  DockTimeline.tsx  DropZone.tsx  EjectBar.tsx  ErrorBoundary.tsx  ExtDot.tsx  FileCard.tsx  FileIcon.tsx  HelpModal.tsx  Icons.tsx  Kbd.tsx  MarkdownDiffView.tsx  MarkdownEditor.tsx  MermaidExtension.tsx  (+9 more)
(+20 files in other folders)
