[package]
name = "codrum"
version = "0.3.0"
edition = "2021"

[lib]
name = "codrum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
uuid = { version = "1", features = ["v4"] }
window-vibrancy = "0.6"
